--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script type="text/javascript" src="js/views/task_row.js"></script>
   <script type="text/javascript" src="js/views/task_new.js"></script>
   <script type="text/javascript" src="js/views/task_edit.js"></script>
-  <script type="text/javascript" src="js/views/task_show.js"></script>
+  <!-- <script type="text/javascript" src="js/views/task_show.js"></script>-->
 </head>
 <body>
 
@@ -43,10 +43,6 @@
           <label>Default Duration:</label>
           <input type="text" class="form-control" name="duration" value="<%= duration %>" />
         </div>
-        <div class="form-group">
-          <label>Instance:</label>
-          <input type="text" class="form-control" name="instance" value="<%= instance %>" />
-        </div>
         <button class="save btn btn-large btn-info" type="submit">Save</button>
         <a href="#tasks/index" class="btn btn-large">Cancel</a>
       </form>
@@ -63,20 +59,23 @@
 
   <!-- the row template, renders once for each item in the index -->
   <script type="text/template" id="rowTemplate">
-  
-      <h1 class="rotate"><%= title %></h1>
-      <h2 class="rotate"><%= duration %></h2>
-      <div class="instances"><%= instance %></div>
-      <div class="task-buttons">
-	    <a href="#" class="add task-title btn btn-danger btn-small">+</a>
-      <a href="#" class="add task-title btn btn-danger btn-small">-</a>
-      <br><br><br>
-	    <a href="#task/<%= id %>/edit" class="task-title btn btn-danger btn-small">edit</a>
-      <a href="#" class="delete btn btn-danger btn-small">delete</a>
-	  </div>
+      <div class"single-task">  
+        <h1 class="rotate"><%= title %></h1>
+        <h2 class="rotate"><%= duration %></h2>
+        <div class="instances"><%= instance %></div>
+        <div class="task-buttons">
+  	    <a href="#" class="add task-title btn btn-danger btn-small">+</a>
+        <a href="#" class="delete task-title btn btn-danger btn-small">-</a>
+        <br><br><br>
+  	    <a href="#task/<%= id %>/edit" class="task-title btn btn-danger btn-small">edit</a>
+        <a href="#" class="delete btn btn-danger btn-small">delete</a>
+  	  </div>
+    </div>
   </script>
 
-
+  <script type="text/javascript">
+          //alert("blash");
+  </script>
 
   <!-- kick off the app -->
   <script type="text/javascript">
@@ -109,5 +108,13 @@
     // now that everyting is setup we tell backbone to watch the urls
     Backbone.history.start();
   </script>
+  <script>
+  $( document ).ready(function() {
+    click(function() {
+      alert("ugh");
+    });
+    
+  });
+</script>
 </body>
 </html>
