--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12" id="primary-content">
+
+      <p> Chocolate </p>
         <!-- the container that gets populated with the index -->
       </div>
     </div>
@@ -63,7 +65,7 @@
   
       <h1 class="rotate"><%= title %></h1>
       <h2 class="rotate"><%= duration %></h2>
-      <div class="instances">sometext</div>
+      <div class="instances">instances stack here</div>
       <div class="task-buttons">
 	    <a href="#" class="add task-title btn btn-danger btn-small">+</a>
       <a href="#" class="petitedelete task-title btn btn-danger btn-small">-</a>
