--- a/index.html
+++ b/index.html
@@ -122,6 +122,11 @@ function divCounterForWidth() {
 
 divCounterForWidth();
 
+//Eventlistener for adding div count
+$(".save").click(function() {
+  alert("Handler for .click() called.");
+});
+
 //Take total number of divs and divide the sum by 100%
 
 //Add result to the css of all the divs with 'divWidthChanger'
