updated the alert onclick of save

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ divCounterForWidth();
 
 //Eventlistener for adding div count
 $(".save").click(function() {
-  alert("Handler for .click() called.");
+  alert("Handler for" + divCountForWidthChanger + "changed.");
 });
 
 //Take total number of divs and divide the sum by 100%
