--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
   <script type="text/javascript" src="js/task_router.js"></script>
   <script type="text/javascript" src="js/models/task_model.js"></script>
   <script type="text/javascript" src="js/views/task_index.js"></script>
-  <script type="text/javascript" src="js/views/task_row.js"></script>
+  <script type="text/javascript" src="js/views/task_column.js"></script>
   <script type="text/javascript" src="js/views/task_new.js"></script>
   <script type="text/javascript" src="js/views/task_edit.js"></script>
-  <script type="text/javascript" src="js/views/task_show.js"></script>
+  <!-- <script type="text/javascript" src="js/views/task_show.js"></script>-->
 </head>
 <body>
 
   <div class="container">
     <div class="row">
-    <div> {{message}} </div>
       <div class="col-md-12" id="primary-content">
-        <!-- the container that gets populated with the index -->
 
+      <p> Chocolate </p>
+        <!-- the container that gets populated with the index -->
       </div>
     </div>
   </div>
@@ -37,7 +37,6 @@
       <div class="alert alert-danger fade in" style="display:none;"></div>
       <form>
         <h2><%= title %></h2>
-
         <div class="form-group">
           <label>Title:</label>
           <input type="text" class="form-control" name="title" value="<%= title %>" />
@@ -46,10 +45,7 @@
           <label>Default Duration:</label>
           <input type="text" class="form-control" name="duration" value="<%= duration %>" />
         </div>
-        <div class="form-group">
-          <label>Instance:</label>
-          <input type="text" class="form-control" name="instance" value="<%= instance %>" />
-        </div>
+
         <button class="save btn btn-large btn-info" type="submit">Save</button>
         <a href="#tasks/index" class="btn btn-large">Cancel</a>
       </form>
@@ -66,20 +62,24 @@
 
   <!-- the row template, renders once for each item in the index -->
   <script type="text/template" id="rowTemplate">
+
   
       <h1 class="rotate"><%= title %></h1>
       <h2 class="rotate"><%= duration %></h2>
-      <div class="instances"><%= instance %></div>
+      <div class="instances">instances stack here</div>
       <div class="task-buttons">
-	    <a href="#" class="add task-title btn btn-danger btn-small">+</a>
-      <a href="#" class="add task-title btn btn-danger btn-small">-</a>
-      <br><br><br>
-	    <a href="#task/<%= id %>/edit" class="task-title btn btn-danger btn-small">edit</a>
+      <a href="#" class="add task-title btn btn-danger btn-small">+</a>
+      <a href="#" class="petitedelete task-title btn btn-danger btn-small">-</a>
+      <bootstrap><br><br>
+      <a href="#task/<%= id %>/edit" class="task-title btn btn-danger btn-small">edit</a>
       <a href="#" class="delete btn btn-danger btn-small">delete</a>
-	  </div>
+    </div>
+
   </script>
 
-
+  <script type="text/javascript">
+          //alert("blash");
+  </script>
 
   <!-- kick off the app -->
   <script type="text/javascript">
@@ -87,6 +87,7 @@
       tasks: new APP.TaskCollection()
     });
     // we manually pass in the initial data, but this would be called with a collection.fetch() normally
+    //Note that fetch should not be used to populate collections on page load — all models needed at load time should already be bootstrapped in to place. fetch is intended for lazily-loading models for interfaces that are not needed immediately: for example, documents with collections of notes that may be toggled open and closed. http://backbonejs.org/#Collection-fetch//
     router.tasks.reset([
       {
         "title": "Running",
@@ -111,5 +112,27 @@
     // now that everyting is setup we tell backbone to watch the urls
     Backbone.history.start();
   </script>
+
+<script>
+//Adds class 'divWidthChanger' to first-child div 
+function divCounterForWidth() {
+    $('#Tasks').children('div').addClass("divWidthChanger");
+    console.log("#Tasks");
+    var divCountForWidthChanger = ($("div.divWidthChanger").length) +1;
+    console.log("There are " + divCountForWidthChanger + " divs.");
+};
+divCounterForWidth();
+//Eventlistener for adding div count
+$(".save").click(function() {
+  alert("Handler for .click() called.");
+});
+//Take total number of divs and divide the sum by 100%
+//Add result to the css of all the divs with 'divWidthChanger'
+//Color generator 
+$(".divWidthChanger").each(function() {
+   var hue = 'rgb(' + (Math.floor((256-199)*Math.random()) + 200) + ',' + (Math.floor((256-199)*Math.random()) + 200) + ',' + (Math.floor((256-199)*Math.random()) + 200) + ')';
+   $(this).css("background-color", hue);
+});
+</script>
 </body>
 </html>
