Adds bower for client-side deps (#3)

--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 <head>
   <title>TMS</title>
   <!-- load the bootstrap stylesheet -->
-  <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="bower_components/bootstrap/dist/css/bootstrap.css" media="all" rel="stylesheet" type="text/css" />
   <link href="css/styles.css" media="all" rel="stylesheet" type="text/css" />
   <!-- load the libraries we need -->
-  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/zepto/1.1.3/zepto.min.js"></script>
-  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
-  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js"></script>
-   <script type="text/javascript" src="backbone.localStorage.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="bower_components/zepto/zepto.js"></script>
+  <script type="text/javascript" src="bower_components/underscore/underscore.js"></script>
+  <script type="text/javascript" src="bower_components/backbone/backbone.js"></script>
+  <script type="text/javascript" src="bower_components/backbone.localStorage/backbone.localStorage.js"></script>
   <!-- load our scripts -->
   <script type="text/javascript" src="js/task_router.js"></script>
   <script type="text/javascript" src="js/models/task_model.js"></script>
@@ -137,3 +136,4 @@ $(".divWidthChanger").each(function() {
 </script>
 </body>
 </html>
+
