worked on auth.js errors

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
 
         <button class="save btn btn-large btn-info" type="submit">Save</button>
-        <a href="#tasks/index" class="btn btn-large">Cancel</a>
+        <a href="#tasks/index" class="btn btn-large">Chocolate</a>
       </form>
     </div>
   </script>
