created a footer and header in the index-2.html file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
   <!-- <script type="text/javascript" src="js/views/task_show.js"></script>-->
 </head>
 <body>
-
+  <header> 
+    <h1>TMS</h1>
+  </header>
   <div class="container">
     <div class="row">
       <div class="col-md-12" id="primary-content">
@@ -71,7 +73,7 @@
       <div class="task-buttons">
 	    <a href="#" class="add task-title btn btn-danger btn-small">+</a>
       <a href="#" class="petitedelete task-title btn btn-danger btn-small">-</a>
-      <bootstrap><br><br>
+      <br><br>
 	    <a href="#task/<%= id %>/edit" class="task-title btn btn-danger btn-small">edit</a>
       <a href="#" class="delete btn btn-danger btn-small">delete</a>
 	  </div>
